[package]
name = "asymcrypt-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
bitvec = "1.0.1"
num-bigint = "0.4.4"
num-integer = "0.1.45"
statrs = "0.16.0"
prettytable-rs = "^0.10"
toml = "0.8.8"
serde = { version = "1.0.192", features = ["derive"] }
malachite = "0.4.4"